# verifiable-rds-avs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  check_verification.sql  docker-compose.yml  start_proxy.sh  test_verification.sql
.github/workflows/: ci.yml
client/: Cargo.toml  README.md
client/src/: lib.rs  query.rs  verification.rs
contracts/: .env.example  Dockerfile  README.md  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/scripts/: deploy.js
contracts/src/: VerifiableDBAvs.sol  VerifiableDBAvs.sol.old
contracts/test/: VerifiableDBAvs.t.sol
core/: Cargo.toml  README.md
core/src/: config.rs  error.rs  lib.rs  state.rs
core/src/crypto/: hasher.rs  mod.rs
core/src/merkle/: mod.rs  proof.rs  tree.rs
core/src/models/: block.rs  challenge.rs  mod.rs  row.rs  table.rs  transaction.rs
core/src/schema/: ddl.rs  migration.rs  mod.rs  validator.rs
core/src/utils/: mod.rs  resource.rs  string.rs  timer.rs
proxy/: Cargo.toml  Dockerfile  README.md
proxy/src/: config.rs  error.rs  lib.rs  main.rs  security.rs  server.rs  wal_listener.rs
proxy/src/interception/: analyzer.rs  execution.rs  mod.rs  rewrite.rs  verification.rs
proxy/src/protocol/: auth.rs  connection.rs  formatter.rs  message.rs  mod.rs  parser.rs  transaction.rs  validator.rs
proxy/src/security/: anomaly_detector.rs  dos_protection.rs  mod.rs  rate_limiter.rs  security_gateway.rs  traffic_analyzer.rs
proxy/src/transaction/: mod.rs  wal.rs
proxy/src/verification/: client.rs  contract.rs  deterministic.rs  environment.rs  merkle.rs  mod.rs  state.rs
scripts/: init_db.sql
src/: lib.rs
verification/: Cargo.toml  Dockerfile  README.md
verification/src/: contract.rs  main.rs
verification/src/api/: mod.rs
verification/src/merkle/: mod.rs
verification/src/state/: mod.rs
