[workspace]
members = [
    "core",
    "proxy",
    "client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gajesh"]
license = "MIT"
repository = "https://github.com/Gajesh2007/verifiable-rds-avs"
description = "Verifiable RDS AVS - A verifiable database"

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# This section is only used when building from the workspace root
[package]
name = "verifiable-rds-avs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Empty for now as this is just a virtual workspace 