[package]
name = "verifiable-db-client"
version = "0.1.0"
edition = "2021"
authors = ["Verifiable Database Team"]
description = "Client library for interacting with the Verifiable Database"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.1", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
base64 = "0.21.7"
hex = "0.4.3"
postgres = "0.19.7"
bytes = "1.5.0"

[dev-dependencies]
tokio-test = "0.4.3"
mockito = "1.2.0" 