[package]
name = "verifiable-db-core"
version = "0.1.0"
edition = "2021"
description = "Core data structures and utilities for Verifiable RDS AVS"
license = "MIT"

[dependencies]
# Cryptographic libraries with constant-time operations
blake2 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
constant_time_eq = "0.3.0"
hex = "0.4.3"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Async runtime
tokio = { version = "1.35.1", features = ["full"] }

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Utilities
bytes = "1.5.0"
log = "0.4.20"
env_logger = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = "0.8.5"
ethers = { version = "2.0.11", default-features = false, features = ["legacy"] }
sqlparser = "0.40.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tempfile = "3.8.1"
rstest = "0.18.2"

[[bench]]
name = "merkle_tree"
harness = false
path = "benches/merkle_tree.rs" 